--- a/index.html
+++ b/index.html
@@ -4,45 +4,48 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+    <link rel="stylesheet" href="styles.css">
     <title>Document</title>
 </head>
-<body>
-    <table  class="container-fluid text-center">
-        <thead>
-            <tr class="row">
-                <th class="col">Name</th>
-                <th class="col">Birthday</th>
-                <th class="col-6">Message</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr class="row">
-                <td class="col">Mama</td>
-                <td class="col">25/5</td>
-                <td class="col-6">Feliz cumple mama</td>
-            </tr>
-            <tr class="row">
-                <td class="col">Papa</td>
-                <td class="col">23/5</td>
-                <td class="col-6">Feliz cumple papa</td>
-            </tr>
-            <tr class="row">
-                <td class="col">Franco</td>
-                <td class="col">31/5</td>
-                <td class="col-6">Feliz cumple Franco</td>
-            </tr>
-            <tr class="row">
-                <td class="col">Thiago</td>
-                <td class="col">30/8</td>
-                <td class="col-6">Feliz cumple Thiago</td>
-            </tr>
-            <tr class="row">
-                <td class="col">Lucas</td>
-                <td class="col">25/7</td>
-                <td class="col-6">Feliz cumple Lucas</td>
-            </tr>
-        </tbody>
-    </table>
+<body class = "bg-dark ">
+    <div class="div-table">
+        <table  class=" text-center  table table-danger table-hover mx-auto ">
+            <thead>
+                <tr class="row " id = "table-info-custom">
+                    <th class="col">Name</th>
+                    <th class="col">Birthday</th>
+                    <th class="col-6">Message</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr class="row">
+                    <td class="col">Mama</td>
+                    <td class="col">25/5</td>
+                    <td class="col-6">Feliz cumple mama</td>
+                </tr>
+                <tr class="row">
+                    <td class="col">Papa</td>
+                    <td class="col">23/5</td>
+                    <td class="col-6">Feliz cumple papa</td>
+                </tr>
+                <tr class="row">
+                    <td class="col">Franco</td>
+                    <td class="col">31/5</td>
+                    <td class="col-6">Feliz cumple Franco</td>
+                </tr>
+                <tr class="row">
+                    <td class="col">Thiago</td>
+                    <td class="col">30/8</td>
+                    <td class="col-6">Feliz cumple Thiago</td>
+                </tr>
+                <tr class="row">
+                    <td class="col">Lucas</td>
+                    <td class="col">25/7</td>
+                    <td class="col-6">Feliz cumple Lucas</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
 
 
 </body>
